tests/snapshots/snapshot_tests__autodiscover_json_response.snap
---
source: tests/snapshot_tests.rs
assertion_line: 207
expression: response
---
{"Protocol":"ActiveSync","Url":"https://mail.example.com/Microsoft-Server-ActiveSync"}
