tests/snapshots/snapshot_tests__ews_error_response.snap
---
source: tests/snapshot_tests.rs
assertion_line: 247
expression: response
---
<?xml version="1.0" encoding="utf-8"?>
<s:Envelope xmlns:s="http://schemas.xmlsoap.org/soap/envelope/">
    <s:Header>
        <t:ServerVersionInfo MajorVersion="15" MinorVersion="2" MajorBuildNumber="2562" MinorBuildNumber="45" Version="Exchange2016" xmlns:t="http://schemas.microsoft.com/exchange/services/2006/types" />
    </s:Header>
    <s:Body>
        <m:GetItemResponse xmlns:m="http://schemas.microsoft.com/exchange/services/2006/messages" xmlns:t="http://schemas.microsoft.com/exchange/services/2006/types">
            <m:ResponseMessages>
                <m:GetItemResponseMessage ResponseClass="Error">
                    <m:MessageText>The specified item was not found.</m:MessageText>
                    <m:ResponseCode>ErrorItemNotFound</m:ResponseCode>
                    <m:DescriptiveLinkKey>0</m:DescriptiveLinkKey>
                </m:GetItemResponseMessage>
            </m:ResponseMessages>
        </m:GetItemResponse>
    </s:Body>
</s:Envelope>
