tests/snapshots/snapshot_tests__ews_getfolder_calendar_response.snap
---
source: tests/snapshot_tests.rs
assertion_line: 37
expression: response
---
<?xml version="1.0" encoding="utf-8"?>
<s:Envelope xmlns:s="http://schemas.xmlsoap.org/soap/envelope/">
    <s:Header>
        <t:ServerVersionInfo MajorVersion="15" MinorVersion="2" MajorBuildNumber="2562" MinorBuildNumber="45" Version="Exchange2019" xmlns:t="http://schemas.microsoft.com/exchange/services/2006/types" />
    </s:Header>
    <s:Body>
        <m:GetFolderResponse xmlns:m="http://schemas.microsoft.com/exchange/services/2006/messages" xmlns:t="http://schemas.microsoft.com/exchange/services/2006/types">
            <m:ResponseMessages>
                <m:GetFolderResponseMessage ResponseClass="Success">
                    <m:ResponseCode>NoError</m:ResponseCode>
                    <m:Folders>
                        <t:CalendarFolder>
                            <t:FolderId Id="CAL-abc123" ChangeKey="def456" />
                            <t:DisplayName>Calendar</t:DisplayName>
                            <t:FolderClass>IPF.Appointment</t:FolderClass>
                            <t:TotalCount>42</t:TotalCount>
                        </t:CalendarFolder>
                    </m:Folders>
                </m:GetFolderResponseMessage>
            </m:ResponseMessages>
        </m:GetFolderResponse>
    </s:Body>
</s:Envelope>
